--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,13 +12,9 @@ body {
 .container {
   width: 100%;
   max-width: 1200px;
-  min-height: 100vh;
   margin: 0 auto;
   padding: 0 7.5px;
-  position: absolute;
-  top: 600px;
-  left: 50%;
-  transform: translate(-50%, -300px);
+  position: relative;
 }
 
 .main {
@@ -35,7 +31,6 @@ body {
   top: 0;
   left: 100%;
   width: 100%;
-  height: 100%;
   position: absolute;
   box-sizing: border-box;
   transition: all 1s ease;
@@ -47,10 +42,15 @@ body {
 
 .gallery__button {
   position: absolute;
-  width: 100px;
-  height: 50px;
+  width: 58px;
+  height: 58px;
   top: -100px;
-  right: 50px;
+  right: 10px;
+  background: url("../icons/play-button.svg") center center no-repeat;
+  background-size: cover;
+  border: none;
+  outline: none;
+  cursor: pointer;
 }
 
 .global-header {
