function createMasonry() changed and photoes in gallery styled

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -39,6 +39,8 @@ body{
   transition: all 1s ease;
   &__item {
     width: 25%;
+    padding: 2px;
+    border-radius: 2%;
   }
   &__button{
     position: absolute;
